# pca_final_project

./: .gitignore  README.md  Reader.py  main.py  pca.py  pca_result.csv  runner.py  runner.sh
KDTree/: .gitignore  CMakeLists.txt  Grapher.hpp  KDTree.hpp  Node.hpp  Reader.hpp  pca_result.csv  pca_result_2d.csv  puntos.csv  run.sh  test.cpp
KDTree/includes/: KDTree.hpp  Kmeans.hpp  Node.hpp
KDTree/utils/: Grapher.hpp  Reader.hpp  Tester.hpp
PCA/: main.py  main2.py  pca.py
data/: covid_DB.xlsx
myenv/: pyvenv.cfg
pca_kdtree/: CMakeLists.txt  main.cpp  run.sh  test.cpp
pca_kdtree/Components/Grapher/: grapher.cpp  grapher.hpp
pca_kdtree/Components/KDTree/: kdtree.hpp
pca_kdtree/Components/Node/: node.cpp  node.hpp
pca_kdtree/Components/Reader/: reader.cpp  reader.hpp
pca_kdtree/Components/Tester/: tester.cpp
